force-app/main/default/objects/Shipping_Location__c/Shipping_Location__c.object-meta.xml
<CustomObject>
    <label>Shipping Location</label>
    <nameField>
        <label>Shipping Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>