force-app/main/default/objects/Shipping_Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to a Customer Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipping Locations</relationshipLabel>
    <relationshipName>Shipping_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>