force-app/main/default/objects/Shipping_Location__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>