force-app/main/default/objects/Shipping_Location__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <description>City to Ship to</description>
    <label>Shipping City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>