force-app/main/default/objects/Shipping_Location__c/fields/Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code__c</fullName>
    <description>Shipping Postal Code</description>
    <label>Shipping Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>